--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@ project(3DViewer_CPP_2_0)
 set(CMAKE_CXX_STANDARD 23)
 
 add_executable(3DViewer_CPP_2_0 main.cpp
-        model/parser/parser.cc
-        model/parser/parser.h
+        model/obj/obj.cc
+        model/obj/obj.h
         model/transformer/affine_transformer.cc
         model/transformer/affine_transformer.h
-        )
+        model/model.cc model/model.h)
 
